# jsonld-cpp-core

./: CMakeLists.txt  LICENSE  README.md
include/: jsoninc.h  uri.hpp
jsonld-cpp-core/: CMakeLists.txt  Context.cpp  Context.h  DocumentLoader.cpp  IriUtils.cpp  IriUtils.h  JsonLdApi.cpp  JsonLdApi.h  JsonLdConsts.h  JsonLdError.cpp  JsonLdError.h  JsonLdOptions.h  JsonLdProcessor.cpp  JsonLdProcessor.h  JsonLdUtils.cpp  JsonLdUtils.h  JsonldPromise.h  LoadDocumentOptions.h  NormalizeUtils.cpp  NormalizeUtils.h  RDFDataset.cpp  RDFDataset.h  RemoteDocument.cpp
jsonld-cpp-core/network/: CurlLoadDocumentCallback.cpp  CurlLoadDocumentCallback.h  ILoadDocumentCallback.h
jsonld-cpp-core/network/curl/: IHttpRequest.h
jsonld-cpp-core/network/curl/impl/: CurlHelper.h  CurlHttpRequest.cpp  CurlHttpRequest.h
msvs2019/: jsonld-cpp-core.sln  jsonld-cpp-core.vcxproj  jsonld-cpp-core.vcxproj.filters
msvs2019/tests/: jsonld-cpp-core-tests.vcxproj  jsonld-cpp-core-tests.vcxproj.filters
network/curl/: CurlHttpRequest.h  CurlLoadDocumentCallback.cpp  CurlLoadDocumentCallback.h
tests/: CMakeLists.txt
tests/tests-jsonld-cpp-core/: CMakeLists.txt  JsonLdProcessorTest.h  testConstants.h  testHelpers.cpp  testHelpers.h  test_DocumentLoader.cpp  test_DoubleFormatter.cpp  test_IriUtils.cpp  test_JsonLdApi.cpp  test_JsonLdProcessor_expand.cpp  test_JsonLdProcessor_normalize.cpp  test_JsonLdProcessor_toRDF.cpp  test_JsonLdUtils.cpp  test_NodeComparisons.cpp  test_NormalizeUtils.cpp  test_ObjectComparisons.cpp  test_Permutator.cpp  test_Sha1.cpp  test_UniqueNamer.cpp
tests/tests-jsonld-cpp-core/test_data/expand/: expand-our0400-in.jsonld  expand-our0400-out.jsonld  expand-our0401-in.jsonld
xcode/jsonld-cpp-core/Build-Phases/: copy_test_data.sh
xcode/jsonld-cpp-core/jsonld-cpp-core.xcodeproj/: project.pbxproj
